; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_build_condition_iterator.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_build_condition_iterator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.condition_iterator = type { i32, i32 (i32, i32)*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @build_condition_iterator(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.condition_iterator*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call %struct.condition_iterator* @zmalloc(i32 24)
  store %struct.condition_iterator* %4, %struct.condition_iterator** %3, align 8
  %5 = load %struct.condition_iterator*, %struct.condition_iterator** %3, align 8
  %6 = getelementptr inbounds %struct.condition_iterator, %struct.condition_iterator* %5, i32 0, i32 0
  store i32 -1, i32* %6, align 8
  %7 = load i32, i32* %2, align 4
  %8 = load %struct.condition_iterator*, %struct.condition_iterator** %3, align 8
  %9 = getelementptr inbounds %struct.condition_iterator, %struct.condition_iterator* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 8
  %10 = load %struct.condition_iterator*, %struct.condition_iterator** %3, align 8
  %11 = getelementptr inbounds %struct.condition_iterator, %struct.condition_iterator* %10, i32 0, i32 1
  store i32 (i32, i32)* @condition_iterator_jump_to, i32 (i32, i32)** %11, align 8
  %12 = load %struct.condition_iterator*, %struct.condition_iterator** %3, align 8
  %13 = ptrtoint %struct.condition_iterator* %12 to i32
  %14 = call i32 @condition_iterator_jump_to(i32 %13, i32 0)
  %15 = load %struct.condition_iterator*, %struct.condition_iterator** %3, align 8
  %16 = ptrtoint %struct.condition_iterator* %15 to i32
  ret i32 %16
}

declare dso_local %struct.condition_iterator* @zmalloc(i32) #1

declare dso_local i32 @condition_iterator_jump_to(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
